manifests/14_eks/02_addon/01_awslb/ingress/myapp-svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-np
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: myapp-rs
